@@ -1,4 +1,5 @@
 sfqmail() { smtpfront-qmail 2>/dev/null | tail +2; }
+sfecho() { smtpfront-echo 2>/dev/null | tail +2; }
 pfauth() { pop3front-auth "$@" echo Yes. 2>/dev/null | tail +2; }
 pfmaildir() { pop3front-maildir "$@" 2>/dev/null | tail +2; }
 maildir=$tmp/Maildir
